--- a/package.json
+++ b/package.json
@@ -1,15 +1,26 @@
 {
-  "name": "ers-stack",
+  "name": "OPD appointments",
   "version": "0.1.0",
   "private": true,
+  "author": {
+    "name": "Dauleshwar Kumar"
+  },
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.5.0",
+    "@mui/material": "^5.5.0",
+    "@reduxjs/toolkit": "^1.8.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "electron-is-dev": "^1.2.0",
+    "electron-pos-printer": "^1.2.4",
     "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "3.4.1",
     "sqlite3": "^5.0.0"
   },
@@ -18,7 +29,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "electron-dev": "concurrently \"BROWSER=none yarn start\" \"wait-on http://localhost:3000 && electron .\"",
+    "electron-dev": "concurrently \"BROWSER=none npm start\" \"wait-on http://localhost:3000 && electron .\"",
     "lint": "eslint .",
     "rebuild-sqlite3": "electron-rebuild -f -w sqlite3"
   },
