--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
     "@testing-library/user-event": "^7.1.2",
     "electron-is-dev": "^1.2.0",
     "electron-pos-printer": "^1.2.4",
+    "history": "^5.3.0",
     "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^6.2.2",
+    "react-router": "5.2.0",
+    "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.1",
     "sqlite3": "^5.0.0"
   },
   "scripts": {
@@ -31,7 +35,8 @@
     "eject": "react-scripts eject",
     "electron-dev": "concurrently \"BROWSER=none npm start\" \"wait-on http://localhost:3000 && electron .\"",
     "lint": "eslint .",
-    "rebuild-sqlite3": "electron-rebuild -f -w sqlite3"
+    "rebuild-sqlite3": "electron-rebuild -f -w sqlite3",
+    "dist:win": "npx electron-builder --win"
   },
   "main": "public/electron.js",
   "eslintConfig": {
