--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "concurrently": "^5.2.0",
     "electron": "^9.1.2",
     "electron-builder": "^22.8.0",
+    "electron-devtools-installer": "^3.2.0",
     "electron-rebuild": "^1.11.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.10.1",
