--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@mui/icons-material": "^5.5.0",
     "@mui/material": "^5.5.0",
     "@mui/styles": "^5.5.0",
@@ -18,6 +21,7 @@
     "@testing-library/user-event": "^7.1.2",
     "electron-is-dev": "^1.2.0",
     "electron-pos-printer": "^1.2.4",
+    "formik": "^2.2.9",
     "history": "^5.3.0",
     "prettier": "^2.0.5",
     "react": "^17.0.0",
@@ -28,7 +32,8 @@
     "react-scripts": "3.4.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
-    "sqlite3": "^5.0.0"
+    "sqlite3": "^5.0.0",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
