--- a/package.json
+++ b/package.json
@@ -19,20 +19,24 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bluebird": "^3.7.2",
     "electron-is-dev": "^1.2.0",
     "electron-pos-printer": "^1.2.4",
     "formik": "^2.2.9",
     "history": "^5.3.0",
+    "mysql": "^2.18.1",
+    "net": "^1.0.2",
     "prettier": "^2.0.5",
     "react": "^17.0.0",
     "react-dom": "^16.13.1",
+    "react-flip-move": "^3.0.4",
     "react-redux": "^7.2.6",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
-    "sqlite3": "^5.0.0",
+    "sqlite3": "^5.0.2",
     "yup": "^0.32.11"
   },
   "scripts": {
