--- a/package.json
+++ b/package.json
@@ -5,18 +5,35 @@
   "private": true,
   "main": "public/electron.js",
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@mui/material": "^5.5.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "bluebird": "^3.7.2",
     "cross-env": "6.0.2",
     "electron-is-dev": "^2.0.0",
     "electron-log": "^3.0.8",
+    "electron-pos-printer": "^1.2.4",
+    "formik": "^2.2.9",
+    "history": "^5.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-flip-move": "^3.0.4",
+    "react-redux": "^7.2.6",
+    "react-router": "5.2.0",
+    "react-router-dom": "5.2.0",
     "react-scripts": "5.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.1",
     "sqlite3": "^5.0.2",
     "update-electron-app": "^1.2.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "author": "Dauleshwar",
   "homepage": "./",
@@ -66,10 +83,18 @@
   },
   "devDependencies": {
     "concurrently": "^7.0.0",
-    "electron": "^17.1.2",
+    "electron": "^9.1.2",
     "electron-builder": "^22.14.13",
+    "electron-devtools-installer": "^3.2.0",
+    "electron-rebuild": "^1.11.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.19.0",
     "prettier": "^1.4.4",
     "react-scripts": "3.1.2",
-    "wait-on": "^6.0.1"
+    "wait-on": "^5.1.0"
   }
 }
