--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "electron-pos-printer": "^1.2.4",
     "formik": "^2.2.9",
     "history": "^5.3.0",
+    "random-number": "^0.0.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-flip-move": "^3.0.4",
