--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
     "sqlite3": "^5.0.2",
+    "unique-random": "^3.0.0",
     "update-electron-app": "^1.2.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
