--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "5.0.0",
+    "react-to-print": "^2.14.4",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
     "sqlite3": "^5.0.2",
