Working till table

--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "electron-log": "^3.0.8",
     "electron-pos-printer": "^1.2.4",
     "formik": "^2.2.9",
+    "generate-unique-id": "^2.0.1",
     "history": "^5.3.0",
+    "id-auto-increment": "^1.0.1",
     "random-number": "^0.0.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
