--- a/package.json
+++ b/package.json
@@ -5,17 +5,21 @@
   "private": true,
   "main": "public/electron.js",
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
+    "@date-io/moment": "^1.3.13",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/pickers": "^3.3.10",
     "@mui/material": "^5.5.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "bluebird": "^3.7.2",
     "cross-env": "6.0.2",
+    "date-fns": "^2.28.0",
     "electron-devtools-installer": "^3.2.0",
     "electron-is-dev": "^2.0.0",
     "electron-log": "^3.0.8",
@@ -24,6 +28,7 @@
     "generate-unique-id": "^2.0.1",
     "history": "^5.3.0",
     "id-auto-increment": "^1.0.1",
+    "moment": "^2.29.1",
     "random-number": "^0.0.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
